--- a/fc80s_back/index/templates/index/index.html
+++ b/fc80s_back/index/templates/index/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <title>index</title>
 </head>
-<body>
 
+<body>
+<h4>球员</h4>
 {% if player_list %}
     <ul>
     {% for player in player_list %}
-        <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
+        <ul>
+            <ul>
+                <li><a href="{% url 'player' player.id %}">{{ player.name }}</a></li>
+            </ul>
+        </ul>
     {% endfor %}
     </ul>
 {% else %}
-    <p>No polls are available.</p>
+    <p>No content available.</p>
 {% endif %}
 
 </body>
