--- a/mini-fc80s/miniprogram/pages/index/index.wxml
+++ b/mini-fc80s/miniprogram/pages/index/index.wxml
@@ -1,27 +1,34 @@
-<!-- 授权按钮-->
-<button open-type="getUserInfo" wx:if="{{isShow}}" bindgetuserinfo="bindGetUserInfo"></button>
 
-<!-- 头部 -->
-<view class="ui-header">
-    <view class="weui-flex">
-        <view class="ui-avatar">
-            <open-data type="userAvatarUrl"></open-data>
-        </view>
-        <view class="weui-flex__item">
-            <view class="ui-nickname">
-                <open-data type="userNickName"></open-data>
+<view wx:if="{{isLogin == true}}" class="isLogin">
+    <!-- 头部 -->
+    <view class="ui-header">
+        <view class="weui-flex">
+            <view class="ui-avatar">
+                <open-data type="userAvatarUrl"></open-data>
+            </view>
+            <view class="weui-flex__item">
+                <view class="ui-nickname">
+                    <open-data type="userNickName"></open-data>
+                </view>
+            </view>
+            <view class="ui-post">
+                <navigator url="/pages/post/post" wx:if="{{isLogin}}">
+                    <button class="weui-btn" type="primary" size="mini">发起接龙</button>
+                </navigator>
+                <button class="weui-btn" type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" wx:else>发起接龙</button>
             </view>
         </view>
-        <view class="ui-post">
-            <navigator url="/pages/post/post" wx:if="{{isLogin}}">
-                <button class="weui-btn" type="primary" size="mini">发起接龙</button>
-            </navigator>
-            <button class="weui-btn" type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" wx:else>发起接龙</button>
-        </view>
     </view>
+
+    <!-- radar chart -->
+    <view class='radarContainer'>
+    <canvas class='radarCanvas' canvas-id='radarCanvas'></canvas>
+    </view>
+
+</view>    <!-- end of wx:if-->
+
+<view wx:else class="isLogin">
+    <button wx:if="{{canIUse}}" open-type='getUserInfo' lang="zh_CN" bindgetuserinfo="onGotUserInfo">授权登陆</button>
+    <view wx:else>请升级微信版本</view>
 </view>
 
-<!-- radar chart -->
-<view class='radarContainer'>
-<canvas class='radarCanvas' canvas-id='radarCanvas'></canvas>
-</view>
