--- a/mini-fc80s/miniprogram/pages/index/index.wxml
+++ b/mini-fc80s/miniprogram/pages/index/index.wxml
@@ -20,6 +20,11 @@
         </view>
     </view>
 
+    <div class="weui-flex">
+    <div class="weui-flex__item"><div class="placeholder">活动: {{ activities }}</div></div>
+    <div class="weui-flex__item"><div class="placeholder">比赛: {{ matches }}</div></div>
+</div>
+
     <!-- radar chart -->
     <view class='radarContainer'>
     <canvas class='radarCanvas' canvas-id='radarCanvas'></canvas>
