--- a/mini-fc80s/miniprogram/pages/index/index.wxml
+++ b/mini-fc80s/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 
-<view wx:if="{{isLogin == true}}" class="isLogin">
+<view wx:if="{{p_is_login == true}}" class="p_is_login">
     <!-- 头部 -->
     <view class="ui-header">
         <view class="weui-flex">
@@ -32,7 +32,7 @@
 
 </view>    <!-- end of wx:if-->
 
-<view wx:else class="isLogin">
+<view wx:else class="p_is_login">
     <button wx:if="{{canIUse}}" open-type='getUserInfo' lang="zh_CN" bindgetuserinfo="onGotUserInfo">授权登陆</button>
     <view wx:else>请升级微信版本</view>
 </view>
