--- a/mini-fc80s/miniprogram/pages/index/index.wxml
+++ b/mini-fc80s/miniprogram/pages/index/index.wxml
@@ -21,8 +21,8 @@
     </view>
 
     <div class="weui-flex">
-        <div class="weui-flex__item"><div class="placeholder">活动: {{ activities }}</div></div>
-        <div class="weui-flex__item"><div class="placeholder">比赛: {{ matches }}</div></div>
+        <div class="weui-flex__item"><div class="placeholder">活动: {{ p_activities }}</div></div>
+        <div class="weui-flex__item"><div class="placeholder">比赛: {{ p_matches }}</div></div>
     </div>
 
     <!-- radar chart -->
