front: fix variables

--- a/mini-fc80s/miniprogram/pages/activity/activity.wxml
+++ b/mini-fc80s/miniprogram/pages/activity/activity.wxml
@@ -1,5 +1,5 @@
 
-<view wx:if="{{isLogin == true}}" class="isLogin">
+<view wx:if="{{p_is_login == true}}" class="p_is_login">
     <!-- 头部 -->
     <view class="ui-header">
         <view class="weui-flex">
@@ -12,7 +12,7 @@
                 </view>
             </view>
             <view class="ui-post">
-                <navigator url="/pages/post/post" wx:if="{{isLogin}}">
+                <navigator url="/pages/post/post" wx:if="{{p_is_login}}">
                     <button class="weui-btn" type="primary" size="mini">发起接龙</button>
                 </navigator>
                 <button class="weui-btn" type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" wx:else>发起接龙</button>
@@ -22,8 +22,8 @@
 
 </view>    <!-- end of wx:if-->
 
-<view wx:else class="isLogin">
-    <button wx:if="{{canIUse}}" open-type='getUserInfo' lang="zh_CN" bindgetuserinfo="onGotUserInfo">授权登陆</button>
+<view wx:else class="p_is_login">
+    <button wx:if="{{p_can_use}}" open-type='getUserInfo' lang="zh_CN" bindgetuserinfo="onGotUserInfo">授权登陆</button>
     <view wx:else>请升级微信版本</view>
 </view>
 
