--- a/mini-fc80s/miniprogram/pages/activity/activity.wxml
+++ b/mini-fc80s/miniprogram/pages/activity/activity.wxml
@@ -1,5 +1,4 @@
-
-<view wx:if="{{p_is_login == true}}" class="p_is_login">
+<view wx:if="{{p_is_ready == true}}" class="p_is_ready">
     <!-- 头部 -->
     <view class="ui-header">
         <view class="weui-flex">
@@ -12,8 +11,8 @@
                 </view>
             </view>
             <view class="ui-post">
-                <navigator url="/pages/post/post" wx:if="{{p_is_login}}">
-                    <button class="weui-btn" type="primary" size="mini">发起接龙</button>
+                <navigator url="/pages/post/post" wx:if="{{p_is_}}">
+                    <button class="weui-btn" type="primary" size="mini">发起活动</button>
                 </navigator>
                 <button class="weui-btn" type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" wx:else>发起接龙</button>
             </view>
@@ -22,8 +21,7 @@
 
 </view>    <!-- end of wx:if-->
 
-<view wx:else class="p_is_login">
-    <button wx:if="{{p_can_use}}" open-type='getUserInfo' lang="zh_CN" bindgetuserinfo="onGotUserInfo">授权登陆</button>
-    <view wx:else>请升级微信版本</view>
+<view wx:else class="p_is_ready">
+    <view>请先授权登录</view>
 </view>
 
