--- a/mini-fc80s/miniprogram/pages/post/post.wxml
+++ b/mini-fc80s/miniprogram/pages/post/post.wxml
@@ -15,7 +15,7 @@
                 </view>
             </view>
 
-            <!-- 比赛模块 -->
+            <!-- 练习赛模块 -->
             <view wx:if="{{sceneIndex==0}}">
                 <!-- 报名上限 -->
                 <view class="weui-cell weui-cell_input">
@@ -23,45 +23,41 @@
                         <view class="weui-label">报名上限</view>
                     </view>
                     <view class="weui-cell__bd">
-                        <input confirm-type="next" name="maximum" type="number" max="1000" min="1" class="weui-input" placeholder="最大上限1000" value="1000" />
+                        <input confirm-type="next" name="maximum" type="number" max="20" min="1" class="weui-input" placeholder="最大上限20" value="20" />
                     </view>
                 </view>
 
-                <!-- 比赛主题 -->
+                <!-- 活动名称 -->
                 <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
-                        <view class="weui-label">比赛主题</view>
+                        <view class="weui-label">活动名称</view>
                     </view>
                     <view class="weui-cell__bd">
-                        <input confirm-type="next" name="title" maxlength="12" class="weui-input" placeholder="例如：大学同学会" />
+                        <input name="title" confirm-type="next" maxlength="12" class="weui-input" placeholder="例如：队内红蓝大战" />
                     </view>
                 </view>
 
-                <!-- 比赛内容 -->
+                <!-- 活动费用 -->
+                <view class="weui-cell weui-cell_input">
+                    <view class="weui-cell__hd">
+                        <view class="weui-label">活动费用</view>
+                    </view>
+                    <view class="weui-cell__bd">
+                        <input type="digit" name="amount" confirm-type="next" class="weui-input" placeholder="例如：9块9" />
+                    </view>
+                </view>
+
+                <!-- 活动内容 -->
                 <view class="weui-cell">
                     <view class="weui-cell__bd">
-                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="比赛内容，不超过200字" auto-height="{{true}}" />
+                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="活动描述，不超过200字" auto-height="{{true}}" />
                         <view class="weui-textarea-counter">{{contentSize}}/200</view>
                     </view>
                 </view>
-
-                <!-- 说明 -->
-                <!-- <view class="weui-cells__title">参与者需要填写的内容</view>
-                <view class="weui-cell">
-                    <view class="weui-cell__bd">姓名</view>
-                    <view class="weui-cell__ft">必填</view>
-                </view>
-                <view class="weui-cell">
-                    <view class="weui-cell__bd">手机</view>
-                    <view class="weui-cell__ft">必填</view>
-                </view>
-                <view class="weui-cell">
-                    <view class="weui-cell__bd">备注</view>
-                    <view class="weui-cell__ft">选填</view>
-                </view> -->
             </view>
 
-            <!-- 团建模块 -->
+
+            <!-- 比赛模块 -->
             <view wx:if="{{sceneIndex==1}}">
                 <!-- 报名上限 -->
                 <view class="weui-cell weui-cell_input">
@@ -69,34 +65,76 @@
                         <view class="weui-label">报名上限</view>
                     </view>
                     <view class="weui-cell__bd">
-                        <input confirm-type="next" name="maximum" type="number" max="1000" min="1" class="weui-input" placeholder="最大上限1000" value="1000" />
+                        <input confirm-type="next" name="maximum" type="number" max="20" min="1" class="weui-input" placeholder="最大上限20" value="20" />
                     </view>
                 </view>
 
-                <!-- 商品名称 -->
+                <!-- 活动名称 -->
                 <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
-                        <view class="weui-label">商品名称</view>
+                        <view class="weui-label">活动名称</view>
                     </view>
                     <view class="weui-cell__bd">
-                        <input name="title" confirm-type="next" maxlength="12" class="weui-input" placeholder="例如：北京烤鸭" />
+                        <input name="title" confirm-type="next" maxlength="12" class="weui-input" placeholder="例如：客场挑战皇家马德里" />
                     </view>
                 </view>
 
-                <!-- 商品价格 -->
+                <!-- 活动费用 -->
                 <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
-                        <view class="weui-label">商品价格</view>
+                        <view class="weui-label">活动费用</view>
+                    </view>
+                    <view class="weui-cell__bd">
+                        <input type="digit" name="amount" confirm-type="next" class="weui-input" placeholder="例如：9块9" />
+                    </view>
+                </view>
+
+                <!-- 活动内容 -->
+                <view class="weui-cell">
+                    <view class="weui-cell__bd">
+                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="活动描述，不超过200字" auto-height="{{true}}" />
+                        <view class="weui-textarea-counter">{{contentSize}}/200</view>
+                    </view>
+                </view>
+            </view>
+
+
+            <!-- 团建模块 -->
+            <view wx:if="{{sceneIndex==2}}">
+                <!-- 报名上限 -->
+                <view class="weui-cell weui-cell_input">
+                    <view class="weui-cell__hd">
+                        <view class="weui-label">报名上限</view>
+                    </view>
+                    <view class="weui-cell__bd">
+                        <input confirm-type="next" name="maximum" type="number" max="20" min="1" class="weui-input" placeholder="最大上限20" value="20" />
+                    </view>
+                </view>
+
+                <!-- 活动名称 -->
+                <view class="weui-cell weui-cell_input">
+                    <view class="weui-cell__hd">
+                        <view class="weui-label">活动名称</view>
+                    </view>
+                    <view class="weui-cell__bd">
+                        <input name="title" confirm-type="next" maxlength="12" class="weui-input" placeholder="例如：铁锅炖" />
+                    </view>
+                </view>
+
+                <!-- 活动费用 -->
+                <view class="weui-cell weui-cell_input">
+                    <view class="weui-cell__hd">
+                        <view class="weui-label">活动费用</view>
                     </view>
                     <view class="weui-cell__bd">
                         <input type="digit" name="amount" confirm-type="next" class="weui-input" placeholder="例如：9.9" />
                     </view>
                 </view>
 
-                <!-- 商品内容 -->
+                <!-- 活动内容 -->
                 <view class="weui-cell">
                     <view class="weui-cell__bd">
-                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="商品描述，不超过200字" auto-height="{{true}}" />
+                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="活动描述，不超过200字" auto-height="{{true}}" />
                         <view class="weui-textarea-counter">{{contentSize}}/200</view>
                     </view>
                 </view>
