front: adjust func for creating activities

--- a/mini-fc80s/miniprogram/pages/activity/activity.wxml
+++ b/mini-fc80s/miniprogram/pages/activity/activity.wxml
@@ -14,7 +14,7 @@
                 <navigator url="/pages/post/post" wx:if="{{p_is_}}">
                     <button class="weui-btn" type="primary" size="mini">发起活动</button>
                 </navigator>
-                <button class="weui-btn" type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" wx:else>发起接龙</button>
+                <button class="weui-btn" type="primary" size="mini" open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo" wx:else>发起活动</button>
             </view>
         </view>
     </view>
