--- a/mini-fc80s/miniprogram/pages/post/post.wxml
+++ b/mini-fc80s/miniprogram/pages/post/post.wxml
@@ -2,21 +2,20 @@
     <form bindsubmit="bindSubmit">
         <!-- 表单 -->
         <view class="weui-cells weui-cells_after-title">
-
             <!-- 活动 -->
             <view class="weui-cell weui-cell_select">
                 <view class="weui-cell__hd weui-cell__hd_in-select-after">
-                    <view class="weui-label">选择活动</view>
+                    <view class="weui-label">活动类型</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <picker bindchange="bindSceneChange" value="{{scene_ind}}" range="{{scenes}}" name="scene_ind">
-                        <view class="weui-select">{{scenes[scene_ind]}}</view>
+                    <picker bindchange="bindSceneChange" value="{{act_ind}}" range="{{act_types}}" name="act_ind">
+                        <view class="weui-select">{{act_types[act_ind]}}</view>
                     </picker>
                 </view>
             </view>
 
             <!-- 练习赛模块 -->
-            <view wx:if="{{scene_ind==0}}">
+            <view wx:if="{{act_ind==0}}">
                 <!-- 活动名称 -->
                 <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
@@ -26,62 +25,11 @@
                         <input name="act_name" confirm-type="next" maxlength="12" class="weui-input" placeholder="例如：队内红蓝大战" />
                     </view>
                 </view>
-
-                <!-- 活动日期 -->
-                <view class="weui-cell weui-cell_input">
-                    <view class="weui-cell__hd">
-                        <view class="weui-label">活动时间</view>
-                    </view>
-                    <picker class="weui-btn" mode="date" value="{{date}}" start="{{cur_time}}" bindchange="bindDateChange">
-                        <input name="select_date" confirm-type="next" maxlength="12" class="weui-input" placeholder="{{act_date}}"/>
-                    </picker>
-                    <picker class="weui-btn" mode="time" value="{{time}}" bindchange="bindTimeChange" placeholder="select date">
-                        <input name="select_time" confirm-type="next" maxlength="12" class="weui-input" placeholder="{{act_time}}"/>
-                    </picker>
-                </view>
-
-                <!-- 报名上限 -->
-                <view class="weui-cell weui-cell_input">
-                    <view class="weui-cell__hd">
-                        <view class="weui-label">报名上限</view>
-                    </view>
-                    <view class="weui-cell__bd">
-                        <input confirm-type="next" name="max_mem" type="number" max="20" min="1" class="weui-input" placeholder="最大上限20" value="20" />
-                    </view>
-                </view>
-
-                <!-- 活动费用 -->
-                <view class="weui-cell weui-cell_input">
-                    <view class="weui-cell__hd">
-                        <view class="weui-label">活动费用</view>
-                    </view>
-                    <view class="weui-cell__bd">
-                        <input type="digit" name="fee" confirm-type="next" class="weui-input" placeholder="例如：9块9" />
-                    </view>
-                </view>
-
-                <!-- 活动内容 -->
-                <view class="weui-cell">
-                    <view class="weui-cell__bd">
-                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="活动描述，不超过200字" auto-height="{{true}}" />
-                        <view class="weui-textarea-counter">{{contentSize}}/200</view>
-                    </view>
-                </view>
             </view>
 
 
             <!-- 比赛模块 -->
-            <view wx:if="{{scene_ind==1}}">
-                <!-- 报名上限 -->
-                <view class="weui-cell weui-cell_input">
-                    <view class="weui-cell__hd">
-                        <view class="weui-label">报名上限</view>
-                    </view>
-                    <view class="weui-cell__bd">
-                        <input confirm-type="next" name="max_mem" type="number" max="20" min="1" class="weui-input" placeholder="最大上限20" value="20" />
-                    </view>
-                </view>
-
+            <view wx:if="{{act_ind==1}}">
                 <!-- 活动名称 -->
                 <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
@@ -91,39 +39,10 @@
                         <input name="act_name" confirm-type="next" maxlength="12" class="weui-input" placeholder="例如：客场挑战皇家马德里" />
                     </view>
                 </view>
-
-                <!-- 活动费用 -->
-                <view class="weui-cell weui-cell_input">
-                    <view class="weui-cell__hd">
-                        <view class="weui-label">活动费用</view>
-                    </view>
-                    <view class="weui-cell__bd">
-                        <input type="digit" name="fee" confirm-type="next" class="weui-input" placeholder="例如：9块9" />
-                    </view>
-                </view>
-
-                <!-- 活动内容 -->
-                <view class="weui-cell">
-                    <view class="weui-cell__bd">
-                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="活动描述，不超过200字" auto-height="{{true}}" />
-                        <view class="weui-textarea-counter">{{contentSize}}/200</view>
-                    </view>
-                </view>
             </view>
 
-
             <!-- 团建模块 -->
-            <view wx:if="{{scene_ind==2}}">
-                <!-- 报名上限 -->
-                <view class="weui-cell weui-cell_input">
-                    <view class="weui-cell__hd">
-                        <view class="weui-label">报名上限</view>
-                    </view>
-                    <view class="weui-cell__bd">
-                        <input confirm-type="next" name="max_mem" type="number" max="20" min="1" class="weui-input" placeholder="最大上限20" value="20" />
-                    </view>
-                </view>
-
+            <view wx:if="{{act_ind==2}}">
                 <!-- 活动名称 -->
                 <view class="weui-cell weui-cell_input">
                     <view class="weui-cell__hd">
@@ -133,23 +52,46 @@
                         <input name="act_name" confirm-type="next" maxlength="12" class="weui-input" placeholder="例如：铁锅炖" />
                     </view>
                 </view>
+            </view>
 
-                <!-- 活动费用 -->
-                <view class="weui-cell weui-cell_input">
-                    <view class="weui-cell__hd">
-                        <view class="weui-label">活动费用</view>
-                    </view>
-                    <view class="weui-cell__bd">
-                        <input type="digit" name="fee" confirm-type="next" class="weui-input" placeholder="例如：9.9" />
-                    </view>
+            <!-- 活动日期 -->
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">活动时间</view>
                 </view>
+                <picker class="weui-btn" mode="date" value="{{date}}" start="{{cur_time}}" bindchange="bindDateChange">
+                    <input name="select_date" confirm-type="next" maxlength="12" class="weui-input" placeholder="{{act_date}}"/>
+                </picker>
+                <picker class="weui-btn" mode="time" value="{{time}}" bindchange="bindTimeChange" placeholder="select date">
+                    <input name="select_time" confirm-type="next" maxlength="12" class="weui-input" placeholder="{{act_time}}"/>
+                </picker>
+            </view>
 
-                <!-- 活动内容 -->
-                <view class="weui-cell">
-                    <view class="weui-cell__bd">
-                        <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="活动描述，不超过200字" auto-height="{{true}}" />
-                        <view class="weui-textarea-counter">{{contentSize}}/200</view>
-                    </view>
+            <!-- 报名上限 -->
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">报名上限</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input confirm-type="next" name="max_mem" type="number" max="20" min="1" class="weui-input" placeholder="最大上限20" value="20" />
+                </view>
+            </view>
+
+            <!-- 活动费用 -->
+            <view class="weui-cell weui-cell_input">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">活动费用</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input type="digit" name="fee" confirm-type="next" class="weui-input" placeholder="例如：9块9" />
+                </view>
+            </view>
+
+            <!-- 活动内容 -->
+            <view class="weui-cell">
+                <view class="weui-cell__bd">
+                    <textarea name="content" maxlength="200" bindinput="bindInput" class="weui-textarea" placeholder="活动描述，不超过200字" auto-height="{{true}}" />
+                    <view class="weui-textarea-counter">{{contentSize}}/200</view>
                 </view>
             </view>
 
