--- a/mini-fc80s/miniprogram/pages/activity/activity.wxml
+++ b/mini-fc80s/miniprogram/pages/activity/activity.wxml
@@ -19,6 +19,76 @@
         </view>
     </view>
 
+
+    <view class='topTabSwiper'>
+        <view class='tab  {{cur_tab == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>球队活动</view>
+        <view class='tab  {{cur_tab == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>待设计1</view>
+        <view class='tab  {{cur_tab == 2 ? "tabBorer" : ""}}'  data-current = "2" bindtap='checkCurrent'>待设计2</view>
+    </view>
+    <swiper current="{{cur_tab}}" class='swiper' style="height:600px;" duration="300" bindchange="bindTabChange">
+        <swiper-item>
+
+
+            <view class="page">
+                <!-- 我的数据 [[-->
+                <view class="weui-panel" wx:if="{{tst_act_list.length}}">
+                    <!-- 列表标题 -->
+                    <view class="ui-title">我的活动</view>
+                    <!-- 数据列表 [[-->
+                    <view class="ui-list-item" wx:for="{{tst_act_list}}" wx:key="_id">
+                        <navigator url="/pages/detail/detail?id={{item.name}}&status={{item.time}}&&isCreator={{item.isCreator}}&sceneIndex={{item.postInfo.sceneIndex}}" hover-class="none">
+                            <view class="weui-media-box weui-media-box_appmsg">
+                                <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+                                    <!-- <open-data type="userAvatarUrl"></open-data> -->
+                                    <image src="{{item.postInfo.avatarUrl}}" class="ui-avatar"></image>
+                                    <!-- <image class="weui-media-box__thumb " src="{{icon60}}" /> -->
+                                </view>
+                                <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+                                    <view class="weui-media-box__title">{{item.name}}</view>
+                                    <wxs src="./../../wxs/global.wxs" module="global" />
+                                    <view class="weui-media-box__desc">{{item.postInfo.nickName}} · {{global.formatDate(item.createTime)}}</view>
+                                </view>
+                                <view class="" wx:if="{{item.isCreator>0}}">
+                                    <view class="ui-like ui-font-red">♥</view>
+                                </view>
+                            </view>
+                            <view class="ui-content">{{item.postInfo.content}}</view>
+                            <view class="weui-media-box weui-media-box_appmsg ui-toolbar">
+                                <view class="ui-mr-8">
+                                    <span class="ui-font-red" wx:if="{{item.postInfo.status == 1}}">∞ 已结束</span>
+                                    <span class="ui-font-green" wx:else>∞ 进行中</span>
+                                </view>
+                                <view class="ui-mr-8">♯ {{global.getSceneName(item.postInfo.sceneIndex)}}</view>
+                            </view>
+                        </navigator>
+                    </view>
+                    <!-- 数据列表 ]]-->
+                </view>
+                <!--]] 我的数据 -->
+
+                <!-- 暂无数据 [[-->
+                <view class="weui-panel" wx:else>
+                    <!-- 列表标题 -->
+                    <view class="ui-title">我的记录</view>
+                    <view class="weui-loadmore weui-loadmore_line">
+                        <view class="weui-loadmore__tips weui-loadmore__tips_in-line">暂无数据</view>
+                    </view>
+            </view>
+            <!-- 暂无数据 ]]-->
+
+        </view>
+
+
+
+
+        </swiper-item>
+        <swiper-item><view class='swiper_con'>welcome come to 待设计1</view></swiper-item>
+        <swiper-item><view class='swiper_con'>welcome come to 待设计2</view></swiper-item> 
+    </swiper>
+
+
+
+
 </view>    <!-- end of wx:if-->
 
 <view wx:else class="p_is_ready">
