--- a/mini-fc80s/miniprogram/pages/activity/activity.wxss
+++ b/mini-fc80s/miniprogram/pages/activity/activity.wxss
@@ -81,7 +81,7 @@
   margin-right: 8px;
 }
 
-/* radar map */
+/* radar map << */
 .radarContainer{
   background-color: #353535;
   width:100%;
@@ -98,3 +98,41 @@
   margin: 0 auto;
   position: absolute;
 }
+/* radar map >> */
+
+/* switch tabs << */
+.tab {
+  float: left;
+  width: 33.3333%;
+  text-align: center;
+  padding: 10rpx 0;
+}
+ 
+.topTabSwiper {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  zoom: 1;
+}
+ 
+.topTabSwiper:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+ 
+.tabBorer {
+  border-bottom: 1px solid #f00;
+  color: #f00;
+}
+ 
+.swiper {
+  width: 100%;
+}
+ 
+.swiper_con {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  padding: 80rpx 0;
+}
+/* switch tabs >> */
