--- a/mini-fc80s/miniprogram/pages/activity/activity.wxml
+++ b/mini-fc80s/miniprogram/pages/activity/activity.wxml
@@ -21,9 +21,9 @@
 
 
     <view class='topTabSwiper'>
-        <view class='tab  {{cur_tab == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>球队活动</view>
-        <view class='tab  {{cur_tab == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>待设计1</view>
-        <view class='tab  {{cur_tab == 2 ? "tabBorer" : ""}}'  data-current = "2" bindtap='checkCurrent'>待设计2</view>
+        <view class='tab  {{cur_tab == 0 ? "tabBorer" : ""}}'  data-current = "0" bindtap='checkCurrent'>本队活动</view>
+        <view class='tab  {{cur_tab == 1 ? "tabBorer" : ""}}'  data-current = "1" bindtap='checkCurrent'>历史活动</view>
+        <view class='tab  {{cur_tab == 2 ? "tabBorer" : ""}}'  data-current = "2" bindtap='checkCurrent'>其他</view>
     </view>
     <swiper current="{{cur_tab}}" class='swiper' style="height:600px;" duration="300" bindchange="bindTabChange">
         <swiper-item>
@@ -79,16 +79,10 @@
         </view>
 
 
-
-
         </swiper-item>
-        <swiper-item><view class='swiper_con'>welcome come to 待设计1</view></swiper-item>
-        <swiper-item><view class='swiper_con'>welcome come to 待设计2</view></swiper-item> 
+        <swiper-item><view class='swiper_con'>welcome to finished activities</view></swiper-item>
+        <swiper-item><view class='swiper_con'>welcome to others</view></swiper-item>
     </swiper>
-
-
-
-
 </view>    <!-- end of wx:if-->
 
 <view wx:else class="p_is_ready">
